--- a/曲阜师范大学网络空间安全学院迎新解密.md
+++ b/曲阜师范大学网络空间安全学院迎新解密.md
@@ -2,7 +2,6 @@
 title: 曲阜师范大学网络空间安全学院迎新解密
 tags:  	QFNU
 categories:  QFNU
-img:  /img/迎新.png
 ---
 
 小贴士：所有代码段均可以点击右上角快捷复制
@@ -493,4 +492,4 @@ base100
 
 [与佛论禅密码 - Bugku CTF](https://ctf.bugku.com/tool/todousharp)
 
-[核心价值观编码 - Bugku CTF](https://ctf.bugku.com/tool/cvecode)
+[核心价值观编码 - Bugku CTF](
