--- a/未完成的计划清单.md
+++ b/未完成的计划清单.md
@@ -2,13 +2,21 @@
 title:  未完成的计划清单
 tags:  博客日志
 categories:  博客日志
+
 ---
 
 - [ ] 回到顶部
 - [x] 评论区美化
-- [ ] 结束标记
+- [ ] ~~结束标记~~
 - [ ] 音乐
 - [x] 换背景API
-- [ ] live2d bug
-- [ ] 域名备案
-- [ ] ~~背景动态线条~~
+- [x] live2d bug
+- [ ] ~~域名备案~~
+- [x] 背景动态线条
+- [ ] 完善[曲阜师范大学选课指北]
+  - [ ] 课程分类整理
+  - [ ] 课程推荐标签{% label success @推荐 %}
+- [ ] 完善[曲阜师范大学生存手册]
+- [ ] hexo注入器
+- [ ] 正则表达式
+- [ ] js  css
