记录自己的2023

--- a/my2023.md
+++ b/my2023.md
@@ -170,6 +170,10 @@ categories:  [随笔]
 
 ![](https://w1ndys.top/img/jnxl2023/1701356901716.jpg)
 
+好大儿送的一本刑法，旨在叫我好好遵守网络安全法，将来做一个白帽子不要误入歧途
+
+![好大儿](../img/my2023/好大儿.png)
+
 ## 季冬之月（十二月）
 
 已经沦为卷比的形状了捏😭😭😭😭😭😭
