记录自己的2023

--- a/my2023.md
+++ b/my2023.md
@@ -12,7 +12,7 @@ categories:  [随笔]
 >
 > 截止目前日记本已经写完三个本子了，记忆里大概是从高一下学期开始写一直到现在（虽然最近一个月没写，大抵是没空了）
 >
-> <span style="color:#FF0000;">呼呼光这一篇就写了快一个小时</span>
+> <span style="color:#FF0000;"> 呼呼光这一篇就写了快一个小时 </span>
 
 ![日记本](/img/my2023/日记本.jpg)
 
@@ -104,7 +104,7 @@ categories:  [随笔]
 
 填了积极分子相关资料
 
-在百佳宿舍评选幕后，也是这时候认识了myk师哥
+在百佳宿舍评选幕后，也是这时候认识了 myk 师哥
 
 ![百佳宿舍](/img/my2023/百佳宿舍.jpg)
 
@@ -128,15 +128,15 @@ categories:  [随笔]
 
 ## 仲秋之月（八月）
 
-8月多久已经快开学了，我实在是在家待不住了，提前返校学一会，不得不说，一个人是真的舒服
+8 月多久已经快开学了，我实在是在家待不住了，提前返校学一会，不得不说，一个人是真的舒服
 
 见证了日本核污水不负责任排放大海
 
 ![](/img/my2023/曲阜汽车站.jpg)
 
-8月23一次突发奇想，做了大学时代的第一个面向全校的公益项目（也不能说是项目）——[曲阜师范大学选课指北](https://w1ndys.top/2023/09/01/QFNU_Course_Selection_Guide_North/#/)，旨在帮助大家选择合适的任课老师
+8 月 23 一次突发奇想，做了大学时代的第一个面向全校的公益项目（也不能说是项目）——[曲阜师范大学选课指北](https://w1ndys.top/2023/09/01/QFNU_Course_Selection_Guide_North/#/)，旨在帮助大家选择合适的任课老师
 
-目前已经有120+参与贡献者，浏览量4w+
+目前已经有 120+参与贡献者，浏览量 4w+
 
 ![image-20231231234930273](/img/my2023/选课指北.png)
 
@@ -172,7 +172,7 @@ categories:  [随笔]
 
 好大儿送的一本刑法，旨在叫我好好遵守网络安全法，将来做一个白帽子不要误入歧途
 
-![好大儿](../img/my2023/好大儿.png)
+![好大儿](/img/my2023/好大儿.png)
 
 ## 季冬之月（十二月）
 
